<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goose77.router2.Router2.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="1280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/router_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/snifferLayout"
        android:layout_width="800dp"
        android:background="@color/colorAccent"
        android:layout_height="780dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">



        <TextView
            android:id="@+id/snifferTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/sniffer"
            android:textColor="@color/mainText"
            android:layout_margin="2dp"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/packetDisplay"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/mainText"
            android:layout_below="@+id/snifferTitle" />

        <TextView
            android:id="@+id/packetContents"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:layout_below="@id/ProtocolExp"
            android:typeface="monospace"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:text="@string/packetStuff"
            android:textColor="@color/mainText" />

        <TextView
            android:id="@+id/ProtocolExp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="200dp"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:textColor="@color/mainText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/packetDisplay"
            android:text="@string/ProtocolStuff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tableLayout"
        android:layout_width="480dp"
        android:layout_height="700dp"
        android:background="@color/colorAccent"
        tools:layout_editor_absoluteX="516dp"
        tools:layout_editor_absoluteY="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RelativeLayout
            android:id="@+id/ArpTableLayout"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_below="@+id/AdjacencyTableLayout"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:id="@+id/tableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/arpTable"
                android:textColor="@color/mainText"
                android:textSize="17sp" />

            <ListView
                android:id="@+id/arpTableListView"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_margin="2dp"
                android:layout_below="@id/tableTitle"
                android:background="@color/colorPrimary"
                android:textColor="@color/mainText"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/AdjacencyTableLayout"
            android:layout_width="match_parent"
            android:textColor="@color/mainText"
            android:layout_height="120dp">

            <TextView
                android:id="@+id/adjacencyTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mainText"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textSize="17sp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/adjTable" />

            <ListView
                android:id="@+id/AdjacencyTable"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:layout_below="@id/adjacencyTableTitle"
                android:background="@color/colorPrimary"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FowardingTableLayout"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:layout_below="@+id/ArpTableLayout"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:id="@+id/forwardingTableTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:textColor="@color/mainText"
                android:textSize="17sp"
                android:layout_margin="2dp"
                android:text="@string/forwardingTable" />

            <ListView
                android:id="@+id/forwardingTable"
                android:layout_width="match_parent"
                android:layout_below="@id/forwardingTableTitle"
                android:layout_height="173dp"
                android:textColor="@color/mainText"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:layout_below="@+id/FowardingTableLayout"
            android:layout_centerHorizontal="true"
            >


            <TextView
                android:id="@+id/routingTableTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/mainText"
                android:textSize="17sp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"
                android:text="@string/routingable" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_below="@+id/routingTableTitle"
                android:textColor="@color/mainText"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
